--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -38,6 +38,7 @@
 	"account.email_info": "Contact email associated with the key",
 	"account.enhanced_model": "Enhanced model",
 	"account.existing_keys": "Existing keys",
+	"account.free_trial": "Free trial",
 	"account.full_name": "Name and surname",
 	"account.generate_key": "Generate a new key",
 	"account.home": "Account dashboard",
