[sc-5343] Payment improvements (#737)
* Allow to modify customer's data once subscribed

* Refactor usage table

* Allow to modify budget from payment details page

* Add unsubscribe button

* Remove beta logo

* Display usage table in account home

* Display account type

* Add button to top bar

* Call endpoint to modify budget

* Fixes

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -31,6 +31,7 @@
 	"account.delete_user_confirm": "Vols eliminar el teu usuari i l'accés a Nuclia ?",
 	"account.delete_user_warning": "Segur que vols eliminar l'usuari {{ username }}?",
 	"account.enhanced_model": "Model millorat",
+	"account.free_trial": "Prova gratuïta",
 	"account.full_name": "Nom i Cognoms",
 	"account.generate_key": "Generar un nou codi",
 	"account.home": "Tauler de control del compte",
@@ -101,6 +102,8 @@
 	"billing.billing_details": "Dades de facturació",
 	"billing.budget_calculator": "Calculadora de pressupost",
 	"billing.budget_description": "Per evitar despeses excessives en els consums mensuals, us recomanem establir un límit mensual. Si no s'estableix un límit, es poden generar càrrecs inesperats pels consums que superin la quantitat assignada.",
+	"billing.cancel_subscription": "Cancel·la subscripció",
+	"billing.cancel_subscription.title": "Cancel·la la teva subscripció",
 	"billing.card_details": "Detalls de la targeta",
 	"billing.card_name": "Titular de la targeta",
 	"billing.city": "Ciutat",
@@ -108,8 +111,8 @@
 	"billing.company_address": "Adreça de l'empresa",
 	"billing.contact": "Contactar",
 	"billing.contact_name": "Persona de contacte",
-	"billing.cost_per_usage": "Cost per ús",
-	"billing.cost_per_usage.description": "Si supereu els límits, s'aplicarà el cost per ús.",
+	"billing.cost_over_limits": "Cost al superar els límits",
+	"billing.cost_over_limits.description": "Si supereu els límits del nivell de pagament, s'aplicarà el cost per ús.",
 	"billing.country": "País",
 	"billing.custom_plan": "Pla personalitzat",
 	"billing.email": "Factures enviades a",
@@ -139,7 +142,7 @@
 	"billing.ingestion_cost.description": "El càlcul dependrà del nombre de paràgrafs dels documents pujats. La calculadora de pressupost us permetrà fer un pressupost mensual en funció dels vostres requisits específics.",
 	"billing.invalid_address": "L'adreça proporcionada no és vàlida",
 	"billing.invalid_card": "No hem pogut validar la teva targeta.",
-	"billing.invalid_vat": "VAT ID no vàlid",
+	"billing.invalid_vat": "Si us plau, afegiu el codi del país. Ex: ESB000000N",
 	"billing.month": "Mes",
 	"billing.monthly_estimation": "S'estima que el sobreconsum tindrà un cost de",
 	"billing.monthly_estimation.description": "El cost estimat proporcionat es basa en els valors definits i està subjecte a canvis si es modifiquen aquests valors.",
@@ -184,6 +187,7 @@
 	"billing.upgrade": "Actualitzar",
 	"billing.usage.consumables": "Consumibles",
 	"billing.usage.consumption": "Consum",
+	"billing.usage.interval": "Cost corresponent al consum des de {{from}} a {{to}}",
 	"billing.usage.over_consume": "Sobreconsum",
 	"billing.usage.over_cost": "Sobrecost",
 	"billing.usage.tier_included": "Inclòs al nivell",
