--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -38,6 +38,7 @@
 	"account.email_info": "Contact email associated with the key",
 	"account.enhanced_model": "Enhanced model",
 	"account.existing_keys": "Existing keys",
+	"account.free_trial": "Free trial",
 	"account.full_name": "Name and surname",
 	"account.generate_key": "Generate a new key",
 	"account.home": "Account dashboard",
@@ -113,6 +114,9 @@
 	"billing.budget": "On-demand budget",
 	"billing.budget_calculator": "Budget calculator",
 	"billing.budget_description": "To prevent overspending on monthly consumables, we recommend setting a monthly economic limit.<br> Failing to set a limit may result in unexpected charges for any consumption beyond the allotted amount.",
+	"billing.cancel_subscription": "Cancel subscription",
+	"billing.cancel_subscription.description": "Sometimes you just need to call it quits. We get it.",
+	"billing.cancel_subscription.title": "Cancel your subscription",
 	"billing.card_details": "Card details",
 	"billing.card_name": "Name on card",
 	"billing.city": "City",
@@ -120,8 +124,8 @@
 	"billing.company_address": "Company address",
 	"billing.contact": "Contact",
 	"billing.contact_name": "Contact name",
-	"billing.cost_per_usage": "Cost-per-usage",
-	"billing.cost_per_usage.description": "If you exceed the limits, cost per usage will be applied.",
+	"billing.cost_over_limits": "Cost over limits",
+	"billing.cost_over_limits.description": "If you exceed the limits on the payment tiers, the cost per usage will be applied",
 	"billing.country": "Country",
 	"billing.custom_plan": "Custom plan",
 	"billing.email": "Invoices sent to",
@@ -151,7 +155,7 @@
 	"billing.ingestion_cost.description": "The calculation will depend on the number of paragraphs of the uploaded documents. The budget calculator will allow you to make a monthly budget based on your specific requirements.",
 	"billing.invalid_address": "The address provided is not valid",
 	"billing.invalid_card": "We were unable to validate your card.",
-	"billing.invalid_vat": "Invalid VAT ID",
+	"billing.invalid_vat": "Please add the country code. e.g: ESB000000N",
 	"billing.month": "Month",
 	"billing.monthly_estimation": "Overconsumption is estimated to cost",
 	"billing.monthly_estimation.description": "The estimated cost provided is based on the defined values and is subject to change if these values are modified.",
@@ -196,6 +200,7 @@
 	"billing.upgrade": "Upgrade",
 	"billing.usage.consumables": "Consumables",
 	"billing.usage.consumption": "Consumption",
+	"billing.usage.interval": "Cost corresponding to the consumption from {{from}} to {{to}}",
 	"billing.usage.over_consume": "Over consume",
 	"billing.usage.over_cost": "Over cost",
 	"billing.usage.tier_included": "Tier included",
