--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -31,6 +31,7 @@
 	"account.delete_user_confirm": "Quieres eliminar tu usuario y el acceso a Nuclia ?",
 	"account.delete_user_warning": "¿Seguro que quieres eliminar el usuario {{ username }}?",
 	"account.enhanced_model": "Modelo mejorado",
+	"account.free_trial": "Prueba gratis",
 	"account.full_name": "Nombre y Apellidos",
 	"account.generate_key": "Generar un nuevo código",
 	"account.home": "Panel de cuenta",
@@ -101,6 +102,8 @@
 	"billing.billing_details": "Datos de facturación",
 	"billing.budget_calculator": "Calculadora de presupuesto",
 	"billing.budget_description": "Para evitar gastos excesivos en los consumos mensuales, recomendamos establecer un límite mensual.<br> Si no se establece un límite, se pueden generar cargos inesperados por los consumos que excedan la cantidad asignada.",
+	"billing.cancel_subscription": "Cancela suscripción",
+	"billing.cancel_subscription.title": "Cancela tu suscripción",
 	"billing.card_details": "Detalles de la tarjeta",
 	"billing.card_name": "Titular de la tarjeta",
 	"billing.city": "Ciudad",
@@ -108,8 +111,8 @@
 	"billing.company_address": "Dirección de la empresa",
 	"billing.contact": "Contactar",
 	"billing.contact_name": "Persona de contacto",
-	"billing.cost_per_usage": "Coste por uso",
-	"billing.cost_per_usage.description": "Si excede los límites, se aplicará el costo por uso.",
+	"billing.cost_over_limits": "Coste al exceder los límites",
+	"billing.cost_over_limits.description": "Si excede los límites del nivel de pago, se aplicará el costo por uso.",
 	"billing.country": "País",
 	"billing.custom_plan": "Plan personalizado",
 	"billing.email": "Facturas enviadas a",
@@ -139,7 +142,7 @@
 	"billing.ingestion_cost.description": "El cálculo dependerá del número de párrafos de los documentos subidos. La calculadora de presupuesto te permitirá hacer un presupuesto mensual basado en tus requisitos específicos.",
 	"billing.invalid_address": "La dirección proporcionada no es válida",
 	"billing.invalid_card": "No pudimos validar tu tarjeta.",
-	"billing.invalid_vat": "VAT ID no válido",
+	"billing.invalid_vat": "Por favor agregue el código de país. Por ejemplo: ESB000000N",
 	"billing.month": "Mes",
 	"billing.monthly_estimation": "Se estima que el sobreconsumo costará",
 	"billing.monthly_estimation.description": "El coste estimado proporcionado se basa en los valores definidos y está sujeto a cambios si se modifican estos valores.",
@@ -184,6 +187,7 @@
 	"billing.upgrade": "Actualizar",
 	"billing.usage.consumables": "Consumibles",
 	"billing.usage.consumption": "Consumo",
+	"billing.usage.interval": "Coste correspondiente al consumo de {{from }} a {{to}}",
 	"billing.usage.over_consume": "Sobreconsumo",
 	"billing.usage.over_cost": "Sobrecoste",
 	"billing.usage.tier_included": "Incluido en el nivel",
