[sc-5348] Remove all this is beta error messages

--- a/libs/search-widget/public/i18n/ca.json
+++ b/libs/search-widget/public/i18n/ca.json
@@ -28,8 +28,7 @@
 	"error.audio-loading": "S'ha produït un error en carregar el fitxer d'àudio.",
 	"error.feature-blocked": "La funció de cerca no està permesa en aquest moment.",
 	"error.processing": "Aquest recurs encara no s'ha processat completament",
-	"error.search": "Ups! Alguna cosa ha anat malament!",
-	"error.search-beta": "Sort que t'hem avisat que encara estem en beta! 🙃",
+	"error.search": "Ups! Alguna cosa ha anat malament. Hi estem treballant",
 	"form.title-only": "Cerca només al títol",
 	"generic.cancel": "Cancel·lar",
 	"generic.save": "Guardar",
