--- a/libs/search-widget/public/i18n/en.json
+++ b/libs/search-widget/public/i18n/en.json
@@ -29,8 +29,7 @@
 	"error.audio-loading": "An error occurred while loading the audio file.",
 	"error.feature-blocked": "Search feature is not allowed at the moment.",
 	"error.processing": "This resource is not fully processed yet",
-	"error.search": "Oops! Something is wrong right now!",
-	"error.search-beta": "Luckily we told you it's a beta! 🙃",
+	"error.search": "Oops! Something is wrong. We are working on it",
 	"form.title-only": "Search in title only",
 	"generic.cancel": "Cancel",
 	"generic.save": "Save",
