--- a/libs/search-widget/public/i18n/es.json
+++ b/libs/search-widget/public/i18n/es.json
@@ -28,8 +28,7 @@
 	"error.audio-loading": "Ocurrió un error al cargar el archivo de audio.",
 	"error.feature-blocked": "La función de búsqueda no está permitida en este momento.",
 	"error.processing": "Este recurso aún no se ha procesado por completo",
-	"error.search": "¡Cáspita, algo ha ido mal!",
-	"error.search-beta": "Suerte que te hemos avisado que aún estamos en beta! 🙃",
+	"error.search": "¡Ups! algo ha ido mal. Estamos trabajando en ello",
 	"form.title-only": "Buscar solo en el título",
 	"generic.cancel": "Cancelar",
 	"generic.save": "Guardar",
