--- a/libs/search-widget/public/i18n/fr.json
+++ b/libs/search-widget/public/i18n/fr.json
@@ -26,8 +26,7 @@
 	"error.audio-loading": "Une erreur s'est produite lors du chargement du fichier audio.",
 	"error.feature-blocked": "La fonction de recherche n'est pas autorisée pour le moment.",
 	"error.processing": "Le traitement de cette ressource n'est pas complet",
-	"error.search": "Oups! quelque chose ne va pas!",
-	"error.search-beta": "Heureusement qu'on vous a dit que c'est une beta ! 🙃",
+	"error.search": "Oups! quelque chose ne va pas. Nous y travaillons",
 	"form.title-only": "Rechercher uniquement dans le titre",
 	"generic.cancel": "Annuler",
 	"generic.save": "Enregistrer",
