--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -6,13 +6,13 @@
 	"account.admin.make_admin": "Hacer administrador",
 	"account.admin.warning": "Si le otorgas a este usuario un rol de administrador, el usuario podrá acceder y editar todas las opciones.",
 	"account.billing": "Pago y suscripción",
-	"account.chart_ML_characters": "Caracteres ML",
 	"account.chart_documents": "Documentos no multimedia",
 	"account.chart_error_chars": "No se pueden recuperar los datos de \"caracteres ML\"",
 	"account.chart_error_docs_no_media": "No se pueden recuperar los datos del \"documento no multimedia\"",
 	"account.chart_error_media_seconds": "No se pueden obtener los datos de \"Horas de medios\"",
 	"account.chart_error_processing_status": "No se pueden recuperar los datos de \"recursos pendientes de procesamiento\"",
 	"account.chart_media_hours": "Horas de los medios",
+	"account.chart_ML_characters": "Caracteres ML",
 	"account.chart_number_resources": "Número de recursos",
 	"account.chart_range_label": "Último {{hours}}",
 	"account.chart_title_pending_resources": "Recursos pendientes de tramitar",
@@ -449,7 +449,7 @@
 	"onboarding.dataset.delete_successful": "Conjunto de datos de muestra eliminado",
 	"onboarding.dataset.import": "Datos de importacion",
 	"onboarding.dataset.import_failed": "La importación del conjunto de datos de muestra falló",
-	"onboarding.dataset.importing_description": "Esto debería ser rápido, pero puede tomar hasta 1 o 2 minutos... ¡Ya falta poco! 🙃",
+	"onboarding.dataset.importing_description": "Esto debería hacerse en unos pocos segundos... ¡Ya casi llegamos! 🙃",
 	"onboarding.dataset.importing_title": "Importando conjunto de datos",
 	"onboarding.dataset.option1": "Juega con un conjunto de datos de muestra al instante...",
 	"onboarding.dataset.option1.description": "La forma más rápida de comenzar y explorar cómo funciona Nuclia es importar un conjunto de datos de muestra. Podrás eliminarlo fácilmente en cualquier momento.",
@@ -457,7 +457,6 @@
 	"onboarding.dataset.option2.description": "Cargue algunas carpetas, enlaces o agregue recursos desde un CSV para que pueda usar Nuclia. Tenga en cuenta que procesar, categorizar e indexar el contenido puede llevar algún tiempo.",
 	"onboarding.dataset.title": "Comienza a usar Nuclia",
 	"onboarding.get_started": "Empezar",
-	"onboarding.industry.IT_software": "TI / Software",
 	"onboarding.industry.chemical_industry": "Industria química",
 	"onboarding.industry.construction": "Construcción",
 	"onboarding.industry.education": "Educación",
@@ -467,6 +466,7 @@
 	"onboarding.industry.food_service": "Servicio de comida",
 	"onboarding.industry.health": "Salud",
 	"onboarding.industry.insurance": "Seguro",
+	"onboarding.industry.IT_software": "TI / Software",
 	"onboarding.industry.legal": "Legal",
 	"onboarding.industry.manufacturing": "Fabricación",
 	"onboarding.industry.marketing": "Márketing",
@@ -773,10 +773,10 @@
 	"stash.widgets.relations": "Relaciones",
 	"stash.widgets.relations.help": "Muestra información de las entidades relacionadas en los resultados de búsqueda.",
 	"stash.widgets.snippet": "Fragmento de código",
-	"stash.widgets.suggestLabels": "Sugerir etiquetas",
-	"stash.widgets.suggestLabels.help": "Cuando se ha realizado el entrenamiento de la intención de búsqueda de etiquetas, muestra las etiquetas sugeridas en función de la consulta",
 	"stash.widgets.suggestions": "Sugerencias",
 	"stash.widgets.suggestions.help": "Sugerir resultados mientras escribe la consulta de búsqueda",
+	"stash.widgets.suggestLabels": "Sugerir etiquetas",
+	"stash.widgets.suggestLabels.help": "Cuando se ha realizado el entrenamiento de la intención de búsqueda de etiquetas, muestra las etiquetas sugeridas en función de la consulta",
 	"stash.widgets.title": "Generador de widgets de búsqueda",
 	"stash.widgets.warning": "Para que el widget funcione correctamente, el cuadro de conocimiento <strong>debe ser público</strong>.",
 	"stash.widgets.warning-dangerous-snippet": "¡Zona peligrosa! Para que este widget funcione con un cuadro de conocimiento privado, debe proporcionar un token de API.",
