enable generative answer in search page

--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -6,13 +6,13 @@
 	"account.admin.make_admin": "Make Administrator",
 	"account.admin.warning": "If you give the administrator role to this user, they will be able to access and edit all options.",
 	"account.billing": "Payment & Subscription",
+	"account.chart_ML_characters": "ML characters",
 	"account.chart_documents": "Non-media documents",
 	"account.chart_error_chars": "Unable to fetch \"ML characters\" data",
 	"account.chart_error_docs_no_media": "Unable to fetch \"Non-media document\" data",
 	"account.chart_error_media_seconds": "Unable to fetch \"Media hours\" data",
 	"account.chart_error_processing_status": "Unable to fetch \"resources pending to be processed\" data",
 	"account.chart_media_hours": "Media hours",
-	"account.chart_ML_characters": "ML characters",
 	"account.chart_number_resources": "Number of resources",
 	"account.chart_range_label": "Last {{hours}}",
 	"account.chart_title_pending_resources": "Resources pending to be processed",
@@ -475,6 +475,7 @@
 	"onboarding.dataset.option2.description": "Upload some folders, links or add resources from a CSV so you can use Nuclia. Be aware that processing, categorizing and indexing the content can take some time.",
 	"onboarding.dataset.title": "Start using Nuclia",
 	"onboarding.get_started": "Get started",
+	"onboarding.industry.IT_software": "IT / Software",
 	"onboarding.industry.chemical_industry": "Chemical industry",
 	"onboarding.industry.construction": "Construction",
 	"onboarding.industry.education": "Education",
@@ -484,7 +485,6 @@
 	"onboarding.industry.food_service": "Food service",
 	"onboarding.industry.health": "Health",
 	"onboarding.industry.insurance": "Insurance",
-	"onboarding.industry.IT_software": "IT / Software",
 	"onboarding.industry.legal": "Legal",
 	"onboarding.industry.manufacturing": "Manufacturing",
 	"onboarding.industry.marketing": "Marketing",
@@ -722,6 +722,7 @@
 	"stash.retire.retire": "Make the Knowledge Box private",
 	"stash.retire.warning": "If you unpublish the \"{{ kb }}\" Knowledge Box, all the information in it will become private.",
 	"stash.search": "Search",
+	"stash.search.toggle-answer": "Generative answer",
 	"stash.search_users": "Add a new user",
 	"stash.search_users_add": "Do you really want to add this user to the account? ",
 	"stash.search_users_description": "Add new user’s email",
@@ -805,10 +806,10 @@
 	"stash.widgets.relations": "Relations",
 	"stash.widgets.relations.help": "Displays information about related entities in the search results",
 	"stash.widgets.snippet": "Code snippet",
-	"stash.widgets.suggestions": "Suggestions",
-	"stash.widgets.suggestions.help": "Suggest results while typing search query",
 	"stash.widgets.suggestLabels": "Suggest labels",
 	"stash.widgets.suggestLabels.help": "When label search intent training has been done, displays labels suggested based on the query",
+	"stash.widgets.suggestions": "Suggestions",
+	"stash.widgets.suggestions.help": "Suggest results while typing search query",
 	"stash.widgets.title": "Search widget generator",
 	"stash.widgets.warning": "In order for the widget to work properly, the <strong>knowledge box must be public</strong>.",
 	"stash.widgets.warning-dangerous-snippet": "Dangerous zone! For this widget to work with a private knowledge box you need to provide an API token.",
