--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -6,13 +6,13 @@
 	"account.admin.make_admin": "Hacer administrador",
 	"account.admin.warning": "Si le otorgas a este usuario un rol de administrador, el usuario podrá acceder y editar todas las opciones.",
 	"account.billing": "Pago y suscripción",
+	"account.chart_ML_characters": "Caracteres ML",
 	"account.chart_documents": "Documentos no multimedia",
 	"account.chart_error_chars": "No se pueden recuperar los datos de \"caracteres ML\"",
 	"account.chart_error_docs_no_media": "No se pueden recuperar los datos del \"documento no multimedia\"",
 	"account.chart_error_media_seconds": "No se pueden obtener los datos de \"Horas de medios\"",
 	"account.chart_error_processing_status": "No se pueden recuperar los datos de \"recursos pendientes de procesamiento\"",
 	"account.chart_media_hours": "Horas de los medios",
-	"account.chart_ML_characters": "Caracteres ML",
 	"account.chart_number_resources": "Número de recursos",
 	"account.chart_range_label": "Último {{hours}}",
 	"account.chart_title_pending_resources": "Recursos pendientes de tramitar",
@@ -457,6 +457,7 @@
 	"onboarding.dataset.option2.description": "Cargue algunas carpetas, enlaces o agregue recursos desde un CSV para que pueda usar Nuclia. Tenga en cuenta que procesar, categorizar e indexar el contenido puede llevar algún tiempo.",
 	"onboarding.dataset.title": "Comienza a usar Nuclia",
 	"onboarding.get_started": "Empezar",
+	"onboarding.industry.IT_software": "TI / Software",
 	"onboarding.industry.chemical_industry": "Industria química",
 	"onboarding.industry.construction": "Construcción",
 	"onboarding.industry.education": "Educación",
@@ -466,7 +467,6 @@
 	"onboarding.industry.food_service": "Servicio de comida",
 	"onboarding.industry.health": "Salud",
 	"onboarding.industry.insurance": "Seguro",
-	"onboarding.industry.IT_software": "TI / Software",
 	"onboarding.industry.legal": "Legal",
 	"onboarding.industry.manufacturing": "Fabricación",
 	"onboarding.industry.marketing": "Márketing",
@@ -692,6 +692,7 @@
 	"stash.retire.retire": "Hacer privada la Caja de Conocimiento",
 	"stash.retire.warning": "Si despublicas la Caja de Conocimiento \"{{ kb }}\", toda la información que contiene será privada. ",
 	"stash.search": "Busca",
+	"stash.search.toggle-answer": "Respuesta generativa",
 	"stash.search_users": "Añadir un nuevo usuario",
 	"stash.search_users_add": "¿Quieres añadir el usuario a la cuenta?",
 	"stash.search_users_description": "Añade el correo electrónico del nuevo usuario",
@@ -773,10 +774,10 @@
 	"stash.widgets.relations": "Relaciones",
 	"stash.widgets.relations.help": "Muestra información de las entidades relacionadas en los resultados de búsqueda.",
 	"stash.widgets.snippet": "Fragmento de código",
-	"stash.widgets.suggestions": "Sugerencias",
-	"stash.widgets.suggestions.help": "Sugerir resultados mientras escribe la consulta de búsqueda",
 	"stash.widgets.suggestLabels": "Sugerir etiquetas",
 	"stash.widgets.suggestLabels.help": "Cuando se ha realizado el entrenamiento de la intención de búsqueda de etiquetas, muestra las etiquetas sugeridas en función de la consulta",
+	"stash.widgets.suggestions": "Sugerencias",
+	"stash.widgets.suggestions.help": "Sugerir resultados mientras escribe la consulta de búsqueda",
 	"stash.widgets.title": "Generador de widgets de búsqueda",
 	"stash.widgets.warning": "Para que el widget funcione correctamente, el cuadro de conocimiento <strong>debe ser público</strong>.",
 	"stash.widgets.warning-dangerous-snippet": "¡Zona peligrosa! Para que este widget funcione con un cuadro de conocimiento privado, debe proporcionar un token de API.",
