--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -6,13 +6,13 @@
 	"account.admin.make_admin": "Fer Administrador",
 	"account.admin.warning": "Si converteixes aquest usuari en administrador podrà accedir i editar a totes les opcions.",
 	"account.billing": "Pagament i subscripció",
+	"account.chart_ML_characters": "Caràcters ML",
 	"account.chart_documents": "Documents no multimèdia",
 	"account.chart_error_chars": "No s'han pogut obtenir les dades dels \"caràcters ML\".",
 	"account.chart_error_docs_no_media": "No s'han pogut obtenir les dades del \"document no multimèdia\".",
 	"account.chart_error_media_seconds": "No s'han pogut obtenir les dades de l'\"Horari dels mitjans\".",
 	"account.chart_error_processing_status": "No s'han pogut obtenir les dades dels \"recursos pendents de processar\".",
 	"account.chart_media_hours": "Horari dels mitjans",
-	"account.chart_ML_characters": "Caràcters ML",
 	"account.chart_number_resources": "Nombre de recursos",
 	"account.chart_range_label": "Darrers {{hours}}",
 	"account.chart_title_pending_resources": "Recursos pendents de tramitar",
@@ -457,6 +457,7 @@
 	"onboarding.dataset.option2.description": "Carregueu algunes carpetes, enllaços o afegiu recursos des d'un CSV perquè pugueu utilitzar Nuclia. Tingueu en compte que processar, categoritzar i indexar el contingut pot trigar una mica.",
 	"onboarding.dataset.title": "Comenceu a utilitzar Nuclia",
 	"onboarding.get_started": "Començar",
+	"onboarding.industry.IT_software": "TI / Software",
 	"onboarding.industry.chemical_industry": "Indústria química",
 	"onboarding.industry.construction": "Construcció",
 	"onboarding.industry.education": "Educació",
@@ -466,7 +467,6 @@
 	"onboarding.industry.food_service": "Servei de menjar",
 	"onboarding.industry.health": "Salut",
 	"onboarding.industry.insurance": "Assegurança",
-	"onboarding.industry.IT_software": "TI / Software",
 	"onboarding.industry.legal": "Legal",
 	"onboarding.industry.manufacturing": "Fabricació",
 	"onboarding.industry.marketing": "Màrqueting",
@@ -692,6 +692,7 @@
 	"stash.retire.retire": "Fer privada la Caixa de Coneixment ",
 	"stash.retire.warning": "Si despubliques la Caixa de Coneixement \"{{ kb }}\" fas privada tota la informació que conté.",
 	"stash.search": "Cerca ",
+	"stash.search.toggle-answer": "Resposta generativa",
 	"stash.search_users": "Afegir un nou usuari",
 	"stash.search_users_add": "Vols afegir aquest nou usuari al compte?",
 	"stash.search_users_description": "Afegeix el correu electrònic del nou usuari",
@@ -773,10 +774,10 @@
 	"stash.widgets.relations": "Relacions",
 	"stash.widgets.relations.help": "Mostra informació de les entitats relacionades en els resultats de cerca",
 	"stash.widgets.snippet": "Fragment de codi",
-	"stash.widgets.suggestions": "Suggeriments",
-	"stash.widgets.suggestions.help": "Suggereix resultats mentre escriviu la consulta de cerca",
 	"stash.widgets.suggestLabels": "Suggereix etiquetes",
 	"stash.widgets.suggestLabels.help": "Quan s'ha realitzat l'entrenament de la intenció de cerca d'etiquetes, es mostren les etiquetes suggerides en funció de la consulta",
+	"stash.widgets.suggestions": "Suggeriments",
+	"stash.widgets.suggestions.help": "Suggereix resultats mentre escriviu la consulta de cerca",
 	"stash.widgets.title": "Generador de widgets de cerca",
 	"stash.widgets.warning": "Perquè el giny funcioni correctament, el quadre de coneixement <strong>ha de ser públic</strong>.",
 	"stash.widgets.warning-dangerous-snippet": "Zona perillosa! Perquè aquest giny funcioni amb una caixa de coneixement privada, cal que proporcioneu un testimoni d'API.",
