--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -114,6 +114,7 @@
 	"billing.budget": "On-demand budget",
 	"billing.budget_calculator": "Budget calculator",
 	"billing.budget_description": "To prevent overspending on monthly consumables, we recommend setting a monthly economic limit.<br> Failing to set a limit may result in unexpected charges for any consumption beyond the allotted amount.",
+	"billing.budget_warning": "The current overconsumption will be billed this month.<br>\nThe budget change will take effect next month.",
 	"billing.cancel_subscription": "Cancel subscription",
 	"billing.cancel_subscription.description": "Sometimes you just need to call it quits. We get it.",
 	"billing.cancel_subscription.title": "Cancel your subscription",
