Display remaining trial days

--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -22,6 +22,7 @@
 	"account.consuming": "Consuming",
 	"account.create_new_db": "Create a new Nuclia DB account",
 	"account.create_nua_key": "Create new Nuclia understanding API key ",
+	"account.days_left": "{{days}} days left",
 	"account.db_zone_description": "Select the zone and the processing provider you would like to use for this account (defaults to the account’s zone)",
 	"account.delete.error": "Error when deleting the account",
 	"account.delete_account": "Delete account",
@@ -38,6 +39,7 @@
 	"account.email_info": "Contact email associated with the key",
 	"account.enhanced_model": "Enhanced model",
 	"account.existing_keys": "Existing keys",
+	"account.expired": "Expired",
 	"account.free_trial": "Free trial",
 	"account.full_name": "Name and surname",
 	"account.generate_key": "Generate a new key",
@@ -196,7 +198,7 @@
 	"billing.subscription_tier": "Subscription tier",
 	"billing.success": "Successful subscription",
 	"billing.tier_select.help": "Each tier has different quotas. Select a tier to get a more accurate understanding of the consumption costs.",
-	"billing.trial.title": "30 days trial",
+	"billing.trial.title": "{{days}} days trial",
 	"billing.unit": "unit",
 	"billing.upgrade": "Upgrade",
 	"billing.usage.consumables": "Consumables",
