--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -21,6 +21,7 @@
 	"account.config": "Configuració del compte",
 	"account.consuming": "Processament",
 	"account.create_new_db": "Crear nou compte Nuclia DB",
+	"account.days_left": "Queden {{days}} dies",
 	"account.db_zone_description": "Escull la zona i el proveïdor de processament que vols fer servir per aquesta compte. De forma predeterminada apareix la zona escollida a l’Account",
 	"account.delete.error": "S'ha produït un error al eliminar el compte",
 	"account.delete_account": "Eliminar compte",
@@ -31,6 +32,7 @@
 	"account.delete_user_confirm": "Vols eliminar el teu usuari i l'accés a Nuclia ?",
 	"account.delete_user_warning": "Segur que vols eliminar l'usuari {{ username }}?",
 	"account.enhanced_model": "Model millorat",
+	"account.expired": "Expirada",
 	"account.free_trial": "Prova gratuïta",
 	"account.full_name": "Nom i Cognoms",
 	"account.generate_key": "Generar un nou codi",
@@ -183,7 +185,7 @@
 	"billing.subscription_tier": "Nivell de subscripció",
 	"billing.success": "Subscripció satisfactòria",
 	"billing.tier_select.help": "Cada nivell té quotes diferents. Selecciona un nivell per obtenir informació més acurada dels costos de consum.",
-	"billing.trial.title": "30 dies de prova",
+	"billing.trial.title": "{{days}} dies de prova",
 	"billing.unit": "unitat",
 	"billing.upgrade": "Actualitzar",
 	"billing.usage.consumables": "Consumibles",
