--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -21,6 +21,7 @@
 	"account.config": "Configuración de la cuenta",
 	"account.consuming": "Procesamiento",
 	"account.create_new_db": "Crear nueva cuenta de Nuclia DB",
+	"account.days_left": "Quedan {{days}} días",
 	"account.db_zone_description": "Elige la zona y el proveedor de procesamiento que quieres utilizar para esta cuenta. De forma predeterminada aparece la zona escogida en el Account",
 	"account.delete.error": "Se ha producido un error al eliminar la cuenta",
 	"account.delete_account": "Eliminar cuenta",
@@ -31,6 +32,7 @@
 	"account.delete_user_confirm": "Quieres eliminar tu usuario y el acceso a Nuclia ?",
 	"account.delete_user_warning": "¿Seguro que quieres eliminar el usuario {{ username }}?",
 	"account.enhanced_model": "Modelo mejorado",
+	"account.expired": "Expirada",
 	"account.free_trial": "Prueba gratis",
 	"account.full_name": "Nombre y Apellidos",
 	"account.generate_key": "Generar un nuevo código",
@@ -183,7 +185,7 @@
 	"billing.subscription_tier": "Nivel de suscripción",
 	"billing.success": "Suscripción exitosa",
 	"billing.tier_select.help": "Cada nivel tiene cuotas diferentes. Seleccione un nivel para obtener información más precisa de los costes de consumo.",
-	"billing.trial.title": "30 días de prueba",
+	"billing.trial.title": "{{days}} días de prueba",
 	"billing.unit": "unidad",
 	"billing.upgrade": "Actualizar",
 	"billing.usage.consumables": "Consumibles",
