--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -55,6 +55,7 @@
 	"account.nua_webhook": "Webhook URL",
 	"account.nua_webhook.help": "Una vez que se procesan sus datos, el resultado se publica en esta URL",
 	"account.public": "Público",
+	"account.quota_exhausted": "Cuota agotada",
 	"account.related_kbs": "Cajas de conocimiento de la cuenta",
 	"account.replace_config": "Reemplazar configuración",
 	"account.settings": "Preferencias de la cuenta",
