[sc-5377] Payment improvements (#741)
* Show warning when modifying the budget

* Display remaining trial days

* Add property to sdk

* Don't allow subscription to business plan

* Show quota status

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -21,6 +21,7 @@
 	"account.config": "Configuració del compte",
 	"account.consuming": "Processament",
 	"account.create_new_db": "Crear nou compte Nuclia DB",
+	"account.days_left": "Queden {{days}} dies",
 	"account.db_zone_description": "Escull la zona i el proveïdor de processament que vols fer servir per aquesta compte. De forma predeterminada apareix la zona escollida a l’Account",
 	"account.delete.error": "S'ha produït un error al eliminar el compte",
 	"account.delete_account": "Eliminar compte",
@@ -31,6 +32,7 @@
 	"account.delete_user_confirm": "Vols eliminar el teu usuari i l'accés a Nuclia ?",
 	"account.delete_user_warning": "Segur que vols eliminar l'usuari {{ username }}?",
 	"account.enhanced_model": "Model millorat",
+	"account.expired": "Expirada",
 	"account.free_trial": "Prova gratuïta",
 	"account.full_name": "Nom i Cognoms",
 	"account.generate_key": "Generar un nou codi",
@@ -53,6 +55,7 @@
 	"account.nua_webhook": "Webhook URL",
 	"account.nua_webhook.help": "Un cop processades les teves dades, el resultat es publica a aquest URL",
 	"account.public": "Públic",
+	"account.quota_exhausted": "Quota exhaurida",
 	"account.related_kbs": "Knowledge Box relacionats amb l’Account",
 	"account.replace_config": "Reemplaçar configuració",
 	"account.settings": "Preferències de l’Account",
@@ -102,6 +105,7 @@
 	"billing.billing_details": "Dades de facturació",
 	"billing.budget_calculator": "Calculadora de pressupost",
 	"billing.budget_description": "Per evitar despeses excessives en els consums mensuals, us recomanem establir un límit mensual. Si no s'estableix un límit, es poden generar càrrecs inesperats pels consums que superin la quantitat assignada.",
+	"billing.budget_warning": "El sobreconsum actual es facturarà aquest mes.<br>\nLa modificació del pressupost entrará en vigor el mes següent.",
 	"billing.cancel_subscription": "Cancel·la subscripció",
 	"billing.cancel_subscription.title": "Cancel·la la teva subscripció",
 	"billing.card_details": "Detalls de la targeta",
@@ -182,7 +186,7 @@
 	"billing.subscription_tier": "Nivell de subscripció",
 	"billing.success": "Subscripció satisfactòria",
 	"billing.tier_select.help": "Cada nivell té quotes diferents. Selecciona un nivell per obtenir informació més acurada dels costos de consum.",
-	"billing.trial.title": "30 dies de prova",
+	"billing.trial.title": "{{days}} dies de prova",
 	"billing.unit": "unitat",
 	"billing.upgrade": "Actualitzar",
 	"billing.usage.consumables": "Consumibles",
