--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -22,6 +22,7 @@
 	"account.consuming": "Consuming",
 	"account.create_new_db": "Create a new Nuclia DB account",
 	"account.create_nua_key": "Create new Nuclia understanding API key ",
+	"account.days_left": "{{days}} days left",
 	"account.db_zone_description": "Select the zone and the processing provider you would like to use for this account (defaults to the account’s zone)",
 	"account.delete.error": "Error when deleting the account",
 	"account.delete_account": "Delete account",
@@ -38,6 +39,7 @@
 	"account.email_info": "Contact email associated with the key",
 	"account.enhanced_model": "Enhanced model",
 	"account.existing_keys": "Existing keys",
+	"account.expired": "Expired",
 	"account.free_trial": "Free trial",
 	"account.full_name": "Name and surname",
 	"account.generate_key": "Generate a new key",
@@ -61,6 +63,7 @@
 	"account.nua_webhook": "Webhook URL",
 	"account.nua_webhook.help": "Once your data is processed, the result is posted to this URL",
 	"account.public": "Public",
+	"account.quota_exhausted": "Quota exhausted",
 	"account.related_kbs": "Account’s Knowledge Boxes",
 	"account.renewal": "Processing consumption renews monthly",
 	"account.replace_config": "Replace settings",
@@ -114,6 +117,7 @@
 	"billing.budget": "On-demand budget",
 	"billing.budget_calculator": "Budget calculator",
 	"billing.budget_description": "To prevent overspending on monthly consumables, we recommend setting a monthly economic limit.<br> Failing to set a limit may result in unexpected charges for any consumption beyond the allotted amount.",
+	"billing.budget_warning": "The current overconsumption will be billed this month.<br>\nThe budget change will take effect next month.",
 	"billing.cancel_subscription": "Cancel subscription",
 	"billing.cancel_subscription.description": "Sometimes you just need to call it quits. We get it.",
 	"billing.cancel_subscription.title": "Cancel your subscription",
@@ -195,7 +199,7 @@
 	"billing.subscription_tier": "Subscription tier",
 	"billing.success": "Successful subscription",
 	"billing.tier_select.help": "Each tier has different quotas. Select a tier to get a more accurate understanding of the consumption costs.",
-	"billing.trial.title": "30 days trial",
+	"billing.trial.title": "{{days}} days trial",
 	"billing.unit": "unit",
 	"billing.upgrade": "Upgrade",
 	"billing.usage.consumables": "Consumables",
