--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -21,6 +21,7 @@
 	"account.config": "Configuración de la cuenta",
 	"account.consuming": "Procesamiento",
 	"account.create_new_db": "Crear nueva cuenta de Nuclia DB",
+	"account.days_left": "Quedan {{days}} días",
 	"account.db_zone_description": "Elige la zona y el proveedor de procesamiento que quieres utilizar para esta cuenta. De forma predeterminada aparece la zona escogida en el Account",
 	"account.delete.error": "Se ha producido un error al eliminar la cuenta",
 	"account.delete_account": "Eliminar cuenta",
@@ -31,6 +32,7 @@
 	"account.delete_user_confirm": "Quieres eliminar tu usuario y el acceso a Nuclia ?",
 	"account.delete_user_warning": "¿Seguro que quieres eliminar el usuario {{ username }}?",
 	"account.enhanced_model": "Modelo mejorado",
+	"account.expired": "Expirada",
 	"account.free_trial": "Prueba gratis",
 	"account.full_name": "Nombre y Apellidos",
 	"account.generate_key": "Generar un nuevo código",
@@ -53,6 +55,7 @@
 	"account.nua_webhook": "Webhook URL",
 	"account.nua_webhook.help": "Una vez que se procesan sus datos, el resultado se publica en esta URL",
 	"account.public": "Público",
+	"account.quota_exhausted": "Cuota agotada",
 	"account.related_kbs": "Cajas de conocimiento de la cuenta",
 	"account.replace_config": "Reemplazar configuración",
 	"account.settings": "Preferencias de la cuenta",
@@ -102,6 +105,7 @@
 	"billing.billing_details": "Datos de facturación",
 	"billing.budget_calculator": "Calculadora de presupuesto",
 	"billing.budget_description": "Para evitar gastos excesivos en los consumos mensuales, recomendamos establecer un límite mensual.<br> Si no se establece un límite, se pueden generar cargos inesperados por los consumos que excedan la cantidad asignada.",
+	"billing.budget_warning": "El sobreconsumo actual se facturará este mes.<br>\nEl cambio de presupuesto entrará en vigencia el próximo mes.",
 	"billing.cancel_subscription": "Cancela suscripción",
 	"billing.cancel_subscription.title": "Cancela tu suscripción",
 	"billing.card_details": "Detalles de la tarjeta",
@@ -182,7 +186,7 @@
 	"billing.subscription_tier": "Nivel de suscripción",
 	"billing.success": "Suscripción exitosa",
 	"billing.tier_select.help": "Cada nivel tiene cuotas diferentes. Seleccione un nivel para obtener información más precisa de los costes de consumo.",
-	"billing.trial.title": "30 días de prueba",
+	"billing.trial.title": "{{days}} días de prueba",
 	"billing.unit": "unidad",
 	"billing.upgrade": "Actualizar",
 	"billing.usage.consumables": "Consumibles",
