--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -86,7 +86,7 @@
 	"account.type.label": "Tier",
 	"account.type.stash-basic": "Basic Account",
 	"account.type.stash-business": "Business Account",
-	"account.type.stash-developer": "Developer account",
+	"account.type.stash-developer": "Starter/Developer account",
 	"account.type.stash-enterprise": "Enterprise Account",
 	"account.type.stash-startup": "Startup account",
 	"account.type.stash-team": "Teams Account",
@@ -126,7 +126,7 @@
 	"billing.city": "City",
 	"billing.company": "Company legal name",
 	"billing.company_address": "Company address",
-	"billing.contact": "Contact",
+	"billing.contact": "Contact us",
 	"billing.contact_name": "Contact name",
 	"billing.cost_over_limits": "Cost over limits",
 	"billing.cost_over_limits.description": "If you exceed the limits on the payment tiers, the cost per usage will be applied",
