--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -74,12 +74,12 @@
 	"account.token_generation_warning": "Si generes un nou codi perdràs l’accés amb la clau actual i es perdran els processos que s'estiguin executant en aquests moments.",
 	"account.total_queries": "Nombre total de cerques",
 	"account.type.label": "Nivell",
-	"account.type.stash-basic": "Compte Bàsic",
-	"account.type.stash-business": "Compte de negoci",
-	"account.type.stash-developer": "Compte de desenvolupador",
-	"account.type.stash-enterprise": "Compte d'empresa",
-	"account.type.stash-startup": "Compte de startup",
-	"account.type.stash-team": "Compte d'equips",
+	"account.type.stash-basic": "Compte Basic",
+	"account.type.stash-business": "Compte Business",
+	"account.type.stash-developer": "Compte Starter/Developer",
+	"account.type.stash-enterprise": "Compte Enterprise",
+	"account.type.stash-startup": "Compte Startup",
+	"account.type.stash-team": "Compte Teams",
 	"account.type.stash-trial": "Compte de prova",
 	"account.users": "Gestió d'usuaris",
 	"account.users_amount": "Nombre total d'usuaris al compte",
